--- a/css/agency.css
+++ b/css/agency.css
@@ -82,7 +82,7 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #f6bf01;
+    border-color: #1a4fff;
     color: #fff;
     background-color: #4d76ff;
 }
@@ -134,7 +134,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #f6bf01;
+    border-color: #1a4fff;
     color: #fff;
     background-color: #4d76ff;
 }
