--- a/css/agency.css
+++ b/css/agency.css
@@ -662,6 +662,10 @@ section#contact .section-heading {
     color: #fff;
 }
 
+section#contact p {
+    color: #fff;
+}
+
 section#contact .form-group {
     margin-bottom: 25px;
 }
