--- a/css/agency.css
+++ b/css/agency.css
@@ -666,6 +666,10 @@ section#contact p {
     color: #fff;
 }
 
+section#contact h3 {
+    color: #fff;
+}
+
 section#contact .form-group {
     margin-bottom: 25px;
 }
